submission for deadline

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Flatacuties</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <script defer src="src/index.js"></script>
   </head>
   <body>
     <div class="logo">
@@ -29,7 +30,6 @@
       </div>
 
       <!-- Bonus only! Uncomment the elements below when you are ready to work on the bonus deliverables -->
-      <!-- 
         <h4>Add New Character</h4>
         <form id="character-form">
           <div>
@@ -42,8 +42,6 @@
           </div>
           <input type="submit" value="Add Character" />
         </form> 
-      -->
     </div>
-    <script src="src/index.js"></script>
   </body>
 </html>
